<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organizer_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventShowingActivity"
    android:elevation="10dp"
    android:layout_margin="5dp">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="All Events List"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        android:paddingBottom="10dp"/>


        <ListView
            android:id="@+id/id_event_showing_listview"
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:layout_margin="2dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="#E91E63"
            android:elevation="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />



</androidx.constraintlayout.widget.ConstraintLayout>